--- a/reports/includes.xml
+++ b/reports/includes.xml
@@ -1,10 +1,3 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?xml-stylesheet type="text/xsl" href="../bootstrap_phpcs.xsl"?>
-<phpcs version="1.4.6">
- <file name="/includes/defines.php" errors="1" warnings="0">
-  <error line="14" column="1" source="Joomla.Commenting.SingleComment.NoSpace" severity="5">Please put a space between the // and the start of comment text; found "//Defines."</error>
- </file>
- <file name="/includes/framework.php" errors="1" warnings="0">
-  <error line="15" column="1" source="Joomla.ControlStructures.ControlSignature" severity="5">Expected "if (...)\n"; found "if (...) "</error>
- </file>
-</phpcs>
+<phpcs version="1.4.7"/>
