--- a/reports/includes.xml
+++ b/reports/includes.xml
@@ -1,3 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?xml-stylesheet type="text/xsl" href="../bootstrap_phpcs.xsl"?>
-<phpcs version="1.4.7"/>
+<phpcs version="1.5.1">
+</phpcs>
